force-app/main/default/objects/Book__c/fields/Sub_genre__c.field-meta.xml
<CustomField>
    <fullName>Sub_genre__c</fullName>
    <label>Sub-genre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Genre__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Literary Fiction</fullName>
            </value>
            <value>
                <fullName>Science Fiction</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Mystery</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
            <value>
                <fullName>Memoir</fullName>
            </value>
            <value>
                <fullName>Self-Help</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>LGBTQ+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>