force-app/main/default/objects/Book__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Young Adult</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>